--- a/WoowahanFresh/WoowahanFresh/View/Content/Item/Item.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View/Content/Item/Item.storyboard
@@ -65,7 +65,7 @@
                     <navigationItem key="navigationItem" id="BHM-1q-8y3">
                         <barButtonItem key="leftBarButtonItem" image="arrow" id="r3d-Vb-UkL">
                             <connections>
-                                <action selector="btnBack:" destination="Dxd-SJ-BGd" id="YAP-7Y-YA5"/>
+                                <segue destination="qkO-ya-oYe" kind="unwind" unwindAction="unwindTo:" id="F9H-Tn-Afs"/>
                             </connections>
                         </barButtonItem>
                         <rightBarButtonItems>
@@ -86,6 +86,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8sy-Nx-ivl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="qkO-ya-oYe" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="874.39999999999998" y="178.81773399014779"/>
         </scene>
