--- a/WoowahanFresh/WoowahanFresh/View/First.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View/First.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RAS-HV-UDH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="laI-8C-yWC">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -65,7 +65,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZyB-Wy-shD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7455.1999999999998" y="-72.413793103448285"/>
+            <point key="canvasLocation" x="9340" y="-72.413793103448285"/>
         </scene>
         <!--Content-->
         <scene sceneID="lQQ-oA-hiX">
@@ -73,27 +73,27 @@
                 <viewControllerPlaceholder storyboardName="Content" id="hhe-tV-SbH" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QLv-S2-88a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7978" y="-15"/>
+            <point key="canvasLocation" x="9861.6000000000004" y="-15.517241379310345"/>
         </scene>
         <!--Category-->
         <scene sceneID="MQl-d2-OJH">
             <objects>
                 <viewControllerPlaceholder storyboardName="Category" id="8D7-ay-9wU" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="lGD-Yt-jVm"/>
+                    <tabBarItem key="tabBarItem" title="" image="category" id="lGD-Yt-jVm"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tB1-v0-FYC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7230" y="-610"/>
+            <point key="canvasLocation" x="7245" y="330"/>
         </scene>
         <!--MyPage-->
         <scene sceneID="qjK-gI-PdS">
             <objects>
                 <viewControllerPlaceholder storyboardName="MyPage" id="Yuq-e7-N5f" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Rgc-O9-kOv"/>
+                    <tabBarItem key="tabBarItem" title="" image="mypage" id="Rgc-O9-kOv"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Fb-Xi-3k8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7310" y="-558"/>
+            <point key="canvasLocation" x="7692" y="330"/>
         </scene>
         <!--Search-->
         <scene sceneID="fU7-WN-Sl7">
@@ -101,7 +101,7 @@
                 <viewControllerPlaceholder storyboardName="Search" id="bcw-yo-3vX" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5xN-CF-tef" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7953" y="-327"/>
+            <point key="canvasLocation" x="10084" y="-399"/>
         </scene>
         <!--Top View-->
         <scene sceneID="1yk-MQ-kO1">
@@ -179,46 +179,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M1I-Co-4nl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7668" y="-431"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="Cwj-3F-mJG">
-            <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="RAS-HV-UDH" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="da9-7P-1YG">
-                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="YqY-8N-H6H" kind="relationship" relationship="viewControllers" id="wWX-mh-K6w"/>
-                        <segue destination="8D7-ay-9wU" kind="relationship" relationship="viewControllers" id="Bip-G3-OqM"/>
-                        <segue destination="Yuq-e7-N5f" kind="relationship" relationship="viewControllers" id="kxa-jr-7lc"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ah9-ju-kSu" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="6721" y="-422"/>
-        </scene>
-        <!--홈-->
-        <scene sceneID="wj3-3e-MdO">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YqY-8N-H6H" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="홈" image="home" id="50Q-0N-iT9"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0xh-4z-bhf">
-                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="GGC-DM-Fgn" kind="relationship" relationship="rootViewController" id="J7x-YJ-t90"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Me2-do-Haw" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="6721" y="276"/>
+            <point key="canvasLocation" x="10138" y="-288"/>
         </scene>
         <!--ShoppingList-->
         <scene sceneID="sYz-Ir-BXi">
@@ -226,12 +187,53 @@
                 <viewControllerPlaceholder storyboardName="ShoppingList" id="5rm-tc-BQz" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nwx-UX-fD0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8109" y="-327"/>
+            <point key="canvasLocation" x="10114" y="-363"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="HeO-Lz-YrW">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6Bv-dU-dBa" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="home" id="4BU-D8-L7a"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3WM-Dv-7fe">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="GGC-DM-Fgn" kind="relationship" relationship="rootViewController" id="x0i-8n-BAI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pUt-94-cWA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="8397.6000000000004" y="-72.413793103448285"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Omy-Hc-3hH">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="laI-8C-yWC" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wSI-IL-Neo">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="6Bv-dU-dBa" kind="relationship" relationship="viewControllers" id="Nz0-sO-M4A"/>
+                        <segue destination="8D7-ay-9wU" kind="relationship" relationship="viewControllers" id="WIx-3q-wFt"/>
+                        <segue destination="Yuq-e7-N5f" kind="relationship" relationship="viewControllers" id="Gpd-hU-1KE"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uAb-iE-Vop" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7455.1999999999998" y="-72.413793103448285"/>
         </scene>
     </scenes>
     <resources>
         <image name="BMC" width="78" height="42"/>
+        <image name="category" width="54" height="54"/>
         <image name="home" width="54" height="54"/>
+        <image name="mypage" width="54" height="54"/>
         <image name="search" width="54" height="54"/>
         <image name="shopping" width="54" height="54"/>
     </resources>
