--- a/WoowahanFresh/WoowahanFresh/View/Navigation/Search.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View/Navigation/Search.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wJb-qw-aDl">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -10,32 +10,67 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Search Navication View Controller-->
         <scene sceneID="kt9-25-o5B">
             <objects>
-                <viewController id="wJb-qw-aDl" sceneMemberID="viewController">
+                <viewController id="wJb-qw-aDl" customClass="SearchNavicationViewController" customModule="WoowahanFresh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xoj-yb-fpP">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2SR-bU-bbQ">
-                                <rect key="frame" x="160.5" y="333" width="54" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="IYu-Om-wLf">
+                                <rect key="frame" x="0.0" y="132" width="375" height="646"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="zbE-Is-Cr0">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="wJb-qw-aDl" id="Z7l-DC-Pmu"/>
+                                    </connections>
+                                </searchBar>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="HP0-2p-6le">
+                                        <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HP0-2p-6le" id="qGO-62-kHQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="wJb-qw-aDl" id="VCR-C0-Xb2"/>
+                                    <outlet property="delegate" destination="wJb-qw-aDl" id="YDR-he-RHz"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="2SR-bU-bbQ" firstAttribute="centerY" secondItem="5I0-oI-U9t" secondAttribute="centerY" id="3D1-Hi-Smh"/>
-                            <constraint firstItem="2SR-bU-bbQ" firstAttribute="centerX" secondItem="5I0-oI-U9t" secondAttribute="centerX" id="g9V-Pv-AZk"/>
+                            <constraint firstItem="IYu-Om-wLf" firstAttribute="leading" secondItem="5I0-oI-U9t" secondAttribute="leading" id="BVu-yw-8Zx"/>
+                            <constraint firstItem="IYu-Om-wLf" firstAttribute="top" secondItem="5I0-oI-U9t" secondAttribute="top" constant="88" id="D5P-jd-K42"/>
+                            <constraint firstItem="5I0-oI-U9t" firstAttribute="bottom" secondItem="IYu-Om-wLf" secondAttribute="bottom" id="bBv-jH-uTL"/>
+                            <constraint firstItem="5I0-oI-U9t" firstAttribute="trailing" secondItem="IYu-Om-wLf" secondAttribute="trailing" id="dWh-4M-iOk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5I0-oI-U9t"/>
                     </view>
+                    <connections>
+                        <outlet property="searchBar" destination="zbE-Is-Cr0" id="z5C-n4-DI5"/>
+                        <outlet property="searchDisplayController" destination="klQ-UZ-R6Z" id="mCr-vh-QTU"/>
+                        <outlet property="tableView" destination="IYu-Om-wLf" id="vmH-Hc-Ji6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cFN-lu-3CL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="klQ-UZ-R6Z">
+                    <connections>
+                        <outlet property="delegate" destination="wJb-qw-aDl" id="vLE-P9-wr3"/>
+                        <outlet property="searchContentsController" destination="wJb-qw-aDl" id="NcH-Vy-Jgn"/>
+                        <outlet property="searchResultsDataSource" destination="wJb-qw-aDl" id="kQW-lq-3r6"/>
+                        <outlet property="searchResultsDelegate" destination="wJb-qw-aDl" id="EDo-Fd-j0M"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="-230" y="153"/>
+            <point key="canvasLocation" x="-231.19999999999999" y="152.95566502463055"/>
         </scene>
     </scenes>
 </document>
