--- a/WoowahanFresh/WoowahanFresh/View + Controller/3-1 Content - 홈/Cell/ImageViewCell.xib
+++ b/WoowahanFresh/WoowahanFresh/View + Controller/3-1 Content - 홈/Cell/ImageViewCell.xib
@@ -12,14 +12,33 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ImageViewCell" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ImageViewCell" customModule="WoowahanFresh" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ImageViewCell" selectionStyle="default" indentationWidth="10" rowHeight="125" id="KGk-i7-Jjw" customClass="ImageViewCell" customModule="WoowahanFresh" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="345" height="125"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="345" height="124.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fLZ-bm-885">
+                        <rect key="frame" x="0.0" y="0.0" width="345" height="124"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="345" id="BhU-ix-1zW"/>
+                            <constraint firstAttribute="width" secondItem="fLZ-bm-885" secondAttribute="height" multiplier="345:124" id="j1d-Vo-OLy"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="fLZ-bm-885" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Xr7-lv-Ha0"/>
+                    <constraint firstAttribute="trailing" secondItem="fLZ-bm-885" secondAttribute="trailing" id="ePi-ZH-c4t"/>
+                    <constraint firstItem="fLZ-bm-885" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="lfm-KT-PPC"/>
+                    <constraint firstAttribute="bottom" secondItem="fLZ-bm-885" secondAttribute="bottom" id="qQD-N5-8Ud"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="bannerImage" destination="fLZ-bm-885" id="VoO-rh-Fsv"/>
+            </connections>
+            <point key="canvasLocation" x="72.799999999999997" y="85.007496251874073"/>
         </tableViewCell>
     </objects>
 </document>
